--- a/views/index.html
+++ b/views/index.html
@@ -42,7 +42,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Seu Nome ou Sua Empresa</p>
+        <p>&copy; 2024</p>
     </footer>
     <script src="/script.js"></script>
 </body>
